--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,11 +38,6 @@ body {
   will-change: transform;
 }
 
-.map-wrapper.map-shifted {
-  margin-top: -20vh;
-  transition: margin-top 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .map-image {
   display: block;
   min-width: 100vw; min-height: 100vh;
@@ -185,7 +180,7 @@ body {
   position: absolute;
   bottom: 0; left: 0;
   width: 100%; 
-
+  height: 280.98px;
   background: #fff;
   border-top-left-radius: 24px; border-top-right-radius: 24px;
   box-shadow: 0 -8px 24px rgba(0,0,0,0.08);
